--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Test page</title>
 </head>
 <body>
-	<h1>Misha Pidor</h1>
+	<h1>Misha</h1>
+	<h2><a href="https://vk.com/club12592157">Lesha PIDOR</a></h2>
 </body>
 </html>
