--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
 
 <!-- Подключённые библиотеки -->
 <script src="js/jquery/jquery-1.11.2.min.js"></script> <!-- Библиотека Jquery -->
-<script src="js/socket.io.js"></script><!-->socket.io</!-->
+<script src="js/socket.io.js"></script> <!--socket.io-->
 <script src="js/plugins-scroll/plugins-scroll.js"></script> <!-- Плавный скролл для Chrome -->
 <script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script> <!-- Работа плагинов поле загрузки изображений  -->
 <script src="js/imagefill/jquery-imagefill.js"></script> <!-- Адаптивное отображение изображений   -->
