--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,8 @@
 </head>
 <body>
 <!-- Рабочая зона -->
-<div class="container">
-	<div class="row">
-	</div>
+<div id="box" class="box">
+	<canvas id="canvas" height="" width=""></canvas>	
 </div>
 
 <!-- Конец рабочей зоны -->
