--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 	<!-- Подключённые шрифты -->		
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<!-- Подключённые стили -->
-	<link rel="stylesheet" href="css/noramlize.min.css">
+	<!-- <link rel="stylesheet" href="css/noramlize.min.css"> -->
 	<link rel="stylesheet" href="css/main.css"> 
 	<link rel="stylesheet" href="css/media.css"> 
 </head>
@@ -35,10 +35,10 @@
 <script src="js/jquery/jquery-1.11.2.min.js"></script> <!-- Библиотека Jquery -->
 <script src="js/socket.io.js"></script> <!--socket.io-->
 <script src="js/plugins-scroll/plugins-scroll.js"></script> <!-- Плавный скролл для Chrome -->
-<script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script> <!-- Работа плагинов поле загрузки изображений  -->
-<script src="js/imagefill/jquery-imagefill.js"></script> <!-- Адаптивное отображение изображений   -->
-<script src="js/masonry/masonry.pkgd.min.js"></script> <!-- Адаптивные плиточные блоки -->
-<script src="js/Magnific-Popup/jquery.magnific-popup.min.js"></script> <!-- Модальные окна -->
+<!-- <script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script> --> <!-- Работа плагинов поле загрузки изображений  -->
+<!-- <script src="js/imagefill/jquery-imagefill.js"></script> --> <!-- Адаптивное отображение изображений   -->
+<!-- <script src="js/masonry/masonry.pkgd.min.js"></script>  --><!-- Адаптивные плиточные блоки -->
+<!-- <script src="js/Magnific-Popup/jquery.magnific-popup.min.js"></script>  --><!-- Модальные окна -->
 <script src="js/jquery-pjax/jquery.pjax.js"></script> <!-- Pjax загрузка -->
 <script src="js/common.js"></script> <!-- Персональный код -->
 </body>
