--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 <script src="js/socket.io.js"></script> <!--socket.io-->
 <script src="js/plugins-scroll/plugins-scroll.js"></script> <!-- Плавный скролл для Chrome -->
 <!-- <script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script> --> <!-- Работа плагинов поле загрузки изображений  -->
-<!-- <script src="js/imagefill/jquery-imagefill.js"></script> --> <!-- Адаптивное отображение изображений   -->
+<script src="js/imagefill/jquery-imagefill.js"></script> <!-- Адаптивное отображение изображений   -->
 <!-- <script src="js/masonry/masonry.pkgd.min.js"></script>  --><!-- Адаптивные плиточные блоки -->
 <!-- <script src="js/Magnific-Popup/jquery.magnific-popup.min.js"></script>  --><!-- Модальные окна -->
 <script src="js/jquery-pjax/jquery.pjax.js"></script> <!-- Pjax загрузка -->
