OOP and input name

--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,17 @@
 </head>
 <body>
 <!-- Рабочая зона -->
-<div id="box" class="box">
-	<canvas id="canvas" height="" width=""></canvas>	
-</div>
+<div class="container-fluid box">
+	<div class="row">
+		<div class="col-md-offset-4 col-md-4">
+			<h3 class="title-player-name">Input palyer's name:</h3>
+			<input type="text" class="input" id="inputName" placeholder="Name...">
+			<button id="btnStart" class="btn" id="btnStart">Start</button>
+		</div>
+	</div>
+</div>	 
+
+<canvas id="canvas" height="" width=""></canvas>
 
 <!-- Конец рабочей зоны -->
 
