--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 	<!-- Подключённые шрифты -->		
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<!-- Подключённые стили -->
-	<!-- <link rel="stylesheet" href="css/noramlize.min.css"> -->
+	<link rel="stylesheet" href="css/noramlize.min.css">
 	<link rel="stylesheet" href="css/main.css"> 
 	<link rel="stylesheet" href="css/media.css"> 
 </head>
