--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"> <!-- Кодировка -->
-	<title>Node game</title> <!-- Заголовок -->
+	<title>Node.js game</title> <!-- Заголовок -->
 	<meta name="description" content=""> <!-- Описание -->
 	<!-- Иконка страницы -->
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon"> 
@@ -27,41 +27,54 @@
 <!-- Login block -->
 <div class="container-fluid box-login">
 	<div class="row">
-		<div class="col-sm-offset-4 col-sm-4 col-lg-2 col-lg-offset-5">
-			<h3 class="">Input player's name:</h3>
+		<div class="col-sm-offset-4 col-sm-4 col-lg-4 col-lg-offset-4">
+			<h2 class="title-login">Node.js Game</h2>
+			<p>Hello my dear friend! You are on the site where we develop a browser game from the IO game series. This project has no specific goals and objectives. We learn, and you test our work :)</p>
+			<p>Authors: <a href="https://vk.com/alexeenka">Usov Alex</a> and <a href="https://vk.com/bambaleilobambaleya">Mikhail Gaydamakha</a></p>
+			<h4 class="title-input">Input player's name:</h3>
 			<form action="" id="login">				
 				<input type="text" class="input" id="inputName" placeholder="Name...">
-				<button id="btnStart" class="btn" type="submit">Start</button>
+				<button id="btnStart" class="btn btn-primary">Start</button>
 			</form>
 		</div>
 	</div>
 </div>
 
 <!-- Restart block -->
-<div class="container-fluid box-restart">
+<div class="container-fluid box-restart disabled">
 	<div class="row">
 		<div class="col-md-offset-4 col-md-4">
-			<h3 class="">You're killed :с</h3>
+			<h4 class="title-restart">You're killed :с</h3>
 			<form action="" id="restart">				
-				<button id="btnStart" class="btn" type="submit">Restart</button>
+				<button id="btnStart" class="btn btn-primary" type="submit">Restart</button>
 			</form>
 		</div>
 	</div>
 </div>
-
-
-<!-- Canvans, Captain obvious -->
-<canvas id="canvas" height="" width="">Upgrade your browser</canvas>
-
+<div class="box-game disabled">
+	<!-- Canvans, Captain obvious -->
+	<canvas id="canvas" height="" width="">Update your browser</canvas>
+	<!-- Mini Map -->
+	<canvas id="miniMap" height="" width="">Update your browser</canvas>	
+</div>
+<!-- box-output-info -->
+<div class="box-chat disabled" id="box-chat">
+	<h4 class="chat-title">Chat + log</h4>
+	<div id="chat-output">
+		<ul id="chat-output-ul">
+		</ul>
+	</div>
+	<form action="" id="chat">
+		<input class="input" type="text" id="chat-input">
+		<button class="btn" id="chat-btn">Send</button>
+	</form>
+</div>
 
 <!-- Подключённые библиотеки -->
 <script src="js/jquery/jquery-1.11.2.min.js"></script> <!-- Библиотека Jquery -->
 <script src="js/socket.io.js"></script> <!--socket.io-->
 <script src="js/plugins-scroll/plugins-scroll.js"></script> <!-- Плавный скролл для Chrome -->
-<!-- <script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script> --> <!-- Работа плагинов поле загрузки изображений  -->
-<script src="js/imagefill/jquery-imagefill.js"></script> <!-- Адаптивное отображение изображений   -->
-<!-- <script src="js/masonry/masonry.pkgd.min.js"></script>  --><!-- Адаптивные плиточные блоки -->
-<!-- <script src="js/Magnific-Popup/jquery.magnific-popup.min.js"></script>  --><!-- Модальные окна -->
+
 <script src="js/jquery-pjax/jquery.pjax.js"></script> <!-- Pjax загрузка -->
 <script src="js/common.js"></script> <!-- Персональный код -->
 </body>
