--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
 		</div>
 	</div>
 </div>
+<!-- GAME -->
 <div class="box-game disabled">
 	<!-- Canvans, Captain obvious -->
 	<canvas id="canvas" height="" width="">Update your browser</canvas>
